Experiments/3-yacc-specifications/EXPERIMENT-3-C/control_parser.output
Grammar

    0 $accept: start $end

    1 start: controls

    2 controls: control
    3         | controls control

    4 control: IF
    5        | ELSE
    6        | FOR
    7        | WHILE
    8        | DO
    9        | SWITCH
   10        | OTHER


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IF (258) 4
    ELSE (259) 5
    FOR (260) 6
    WHILE (261) 7
    DO (262) 8
    SWITCH (263) 9
    OTHER (264) 10


Nonterminals, with rules where they appear

    $accept (10)
        on left: 0
    start (11)
        on left: 1
        on right: 0
    controls (12)
        on left: 2 3
        on right: 1 3
    control (13)
        on left: 4 5 6 7 8 9 10
        on right: 2 3


State 0

    0 $accept: . start $end

    IF      shift, and go to state 1
    ELSE    shift, and go to state 2
    FOR     shift, and go to state 3
    WHILE   shift, and go to state 4
    DO      shift, and go to state 5
    SWITCH  shift, and go to state 6
    OTHER   shift, and go to state 7

    start     go to state 8
    controls  go to state 9
    control   go to state 10


State 1

    4 control: IF .

    $default  reduce using rule 4 (control)


State 2

    5 control: ELSE .

    $default  reduce using rule 5 (control)


State 3

    6 control: FOR .

    $default  reduce using rule 6 (control)


State 4

    7 control: WHILE .

    $default  reduce using rule 7 (control)


State 5

    8 control: DO .

    $default  reduce using rule 8 (control)


State 6

    9 control: SWITCH .

    $default  reduce using rule 9 (control)


State 7

   10 control: OTHER .

    $default  reduce using rule 10 (control)


State 8

    0 $accept: start . $end

    $end  shift, and go to state 11


State 9

    1 start: controls .
    3 controls: controls . control

    IF      shift, and go to state 1
    ELSE    shift, and go to state 2
    FOR     shift, and go to state 3
    WHILE   shift, and go to state 4
    DO      shift, and go to state 5
    SWITCH  shift, and go to state 6
    OTHER   shift, and go to state 7

    $default  reduce using rule 1 (start)

    control  go to state 12


State 10

    2 controls: control .

    $default  reduce using rule 2 (controls)


State 11

    0 $accept: start $end .

    $default  accept


State 12

    3 controls: controls control .

    $default  reduce using rule 3 (controls)
